app/src/main/java/com/example/rentit/core/error/UnauthorizedException.kt
package com.example.rentit.core.error

class UnauthorizedException(message: String? = null): Exception(message)